assignment1-initial/src/main/mt22/parser/MT22Parser.java
// Generated from /Users/bientran/Downloads/BTL PPL/assignment1-initial/src/main/mt22/parser/MT22.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MT22Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INTLIT=1, FLOATLIT=2, BOOLLIT=3, STRINGLIT=4, LP=5, RP=6, LCURB=7, RCURB=8, 
		LSQAB=9, RSQAB=10, DOT=11, COMMA=12, SEMICOL=13, COLON=14, EQUAL=15, ADD=16, 
		SUBTRAC=17, MULTI=18, DIVIS=19, MODUL=20, NOT=21, AND=22, OR=23, ISEQUAL=24, 
		NOTEQUAL=25, LESSTHAN=26, LESSTHANOREQ=27, GREATERTHAN=28, GREATERTHANOREQ=29, 
		STRINGCON=30, AUTO=31, BREAK=32, BOOLEAN=33, DO=34, ELSE=35, FALSE=36, 
		FLOAT=37, FOR=38, FUNCTION=39, IF=40, INTERGER=41, RETURN=42, STRING=43, 
		TRUE=44, WHILE=45, VOID=46, OUT=47, CONTINUE=48, OF=49, INHERIT=50, ARRAY=51, 
		ID=52, CMSINGLE=53, CMMULTI=54, WS=55, UNCLOSE_STRING=56, ILLEGAL_ESCAPE=57, 
		ERROR_CHAR=58;
	public static final int
		RULE_program = 0, RULE_decls = 1, RULE_decl = 2, RULE_stm = 3, RULE_matchStm = 4, 
		RULE_unmatchStm = 5, RULE_otherStm = 6, RULE_block_stm = 7, RULE_list_vardecl_stm = 8, 
		RULE_list_vardecl_stmprime = 9, RULE_vardecl_stmprime = 10, RULE_functiondecl = 11, 
		RULE_listparams = 12, RULE_listparamsprime = 13, RULE_call_stm = 14, RULE_return_stm = 15, 
		RULE_continue_stm = 16, RULE_break_stm = 17, RULE_do_while_stm = 18, RULE_while_stm = 19, 
		RULE_for_stm = 20, RULE_assign_stm = 21, RULE_lhs = 22, RULE_paramdecl = 23, 
		RULE_variablesdecl = 24, RULE_list_id = 25, RULE_recursion_assi = 26, 
		RULE_assi_components = 27, RULE_assi_components_EQ = 28, RULE_atomic_types = 29, 
		RULE_atomic_types_for_param = 30, RULE_array_type = 31, RULE_dimensions = 32, 
		RULE_element_type = 33, RULE_arraylit = 34, RULE_listexps = 35, RULE_listexpsprime = 36, 
		RULE_expr = 37, RULE_expr1 = 38, RULE_expr2 = 39, RULE_expr3 = 40, RULE_expr4 = 41, 
		RULE_expr5 = 42, RULE_expr6 = 43, RULE_expr7 = 44, RULE_expr8 = 45, RULE_subexpr = 46, 
		RULE_callexpr = 47;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "decls", "decl", "stm", "matchStm", "unmatchStm", "otherStm", 
			"block_stm", "list_vardecl_stm", "list_vardecl_stmprime", "vardecl_stmprime", 
			"functiondecl", "listparams", "listparamsprime", "call_stm", "return_stm", 
			"continue_stm", "break_stm", "do_while_stm", "while_stm", "for_stm", 
			"assign_stm", "lhs", "paramdecl", "variablesdecl", "list_id", "recursion_assi", 
			"assi_components", "assi_components_EQ", "atomic_types", "atomic_types_for_param", 
			"array_type", "dimensions", "element_type", "arraylit", "listexps", "listexpsprime", 
			"expr", "expr1", "expr2", "expr3", "expr4", "expr5", "expr6", "expr7", 
			"expr8", "subexpr", "callexpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'('", "')'", "'{'", "'}'", "'['", "']'", 
			"'.'", "','", "';'", "':'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", 
			"'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", 
			"'::'", "'auto'", "'break'", "'boolean'", "'do'", "'else'", "'false'", 
			"'float'", "'for'", "'function'", "'if'", "'integer'", "'return'", "'string'", 
			"'true'", "'while'", "'void'", "'out'", "'continue'", "'of'", "'inherit'", 
			"'array'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INTLIT", "FLOATLIT", "BOOLLIT", "STRINGLIT", "LP", "RP", "LCURB", 
			"RCURB", "LSQAB", "RSQAB", "DOT", "COMMA", "SEMICOL", "COLON", "EQUAL", 
			"ADD", "SUBTRAC", "MULTI", "DIVIS", "MODUL", "NOT", "AND", "OR", "ISEQUAL", 
			"NOTEQUAL", "LESSTHAN", "LESSTHANOREQ", "GREATERTHAN", "GREATERTHANOREQ", 
			"STRINGCON", "AUTO", "BREAK", "BOOLEAN", "DO", "ELSE", "FALSE", "FLOAT", 
			"FOR", "FUNCTION", "IF", "INTERGER", "RETURN", "STRING", "TRUE", "WHILE", 
			"VOID", "OUT", "CONTINUE", "OF", "INHERIT", "ARRAY", "ID", "CMSINGLE", 
			"CMMULTI", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MT22.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MT22Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public DeclsContext decls() {
			return getRuleContext(DeclsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MT22Parser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MT22Listener ) ((MT22Listener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MT22Listener ) ((MT22Listener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			decls();
			setState(97);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclsContext extends ParserRuleContext {
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public DeclsContext decls() {
			return getRuleContext(DeclsContext.class,0);
		}
		public DeclsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decls; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MT22Listener ) ((MT22Listener)listener).enterDecls(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MT22Listener ) ((MT22Listener)listener).exitDecls(this);
		}
	}

	public final DeclsContext decls() throws RecognitionException {
		DeclsContext _localctx = new DeclsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decls);
		try {
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				decl();
				setState(100);
				decls();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				decl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public VariablesdeclContext variablesdecl() {
			return getRuleContext(VariablesdeclContext.class,0);
		}
		public FunctiondeclContext functiondecl() {
			return getRuleContext(FunctiondeclContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MT22Listener ) ((MT22Listener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MT22Listener ) ((MT22Listener)listener).exitDecl(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_decl);
		try {
			setState(107);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				variablesdecl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(106);
				functiondecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmContext extends ParserRuleContext {
		public MatchStmContext matchStm() {
			return getRuleContext(MatchStmContext.class,0);
		}
		public UnmatchStmContext unmatchStm() {
			return getRuleContext(UnmatchStmContext.class,0);
		}
		public StmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MT22Listener ) ((MT22Listener)listener).enterStm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MT22Listener ) ((MT22Listener)listener).exitStm(this);
		}
	}

	public final StmContext stm() throws RecognitionException {
		StmContext _localctx = new StmContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stm);
		try {
			setState(111);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				matchStm();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				unmatchStm();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MatchStmContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(MT22Parser.IF, 0); }
		public TerminalNode LP() { return getToken(MT22Parser.LP, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RP() { return getToken(MT22Parser.RP, 0); }
		public List<MatchStmContext> matchStm() {
			return getRuleContexts(MatchStmContext.class);
		}
		public MatchStmContext matchStm(int i) {
			return getRuleContext(MatchStmContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(MT22Parser.ELSE, 0); }
		public OtherStmContext otherStm() {
			return getRuleContext(OtherStmContext.class,0);
		}
		public MatchStmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchStm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MT22Listener ) ((MT22Listener)listener).enterMatchStm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MT22Listener ) ((MT22Listener)listener).exitMatchStm(this);
		}
	}

	public final MatchStmContext matchStm() throws RecognitionException {
		MatchStmContext _localctx = new MatchStmContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_matchStm);
		try {
			setState(122);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				match(IF);
				setState(114);
				match(LP);
				setState(115);
				expr();
				setState(116);
				match(RP);
				setState(117);
				matchStm();
				setState(118);
				match(ELSE);
				setState(119);
				matchStm();
				}
				break;
			case LCURB:
			case BREAK:
			case DO:
			case FOR:
			case RETURN:
			case WHILE:
			case CONTINUE:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(121);
				otherStm();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnmatchStmContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(MT22Parser.IF, 0); }
		public TerminalNode LP() { return getToken(MT22Parser.LP, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RP() { return getToken(MT22Parser.RP, 0); }
		public StmContext stm() {
			return getRuleContext(StmContext.class,0);
		}
		public MatchStmContext matchStm() {
			return getRuleContext(MatchStmContext.class,0);
		}
		public TerminalNode ELSE() { return getToken(MT22Parser.ELSE, 0); }
		public UnmatchStmContext unmatchStm() {
			return getRuleContext(UnmatchStmContext.class,0);
		}
		public UnmatchStmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unmatchStm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MT22Listener ) ((MT22Listener)listener).enterUnmatchStm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MT22Listener ) ((MT22Listener)listener).exitUnmatchStm(this);
		}
	}

	public final UnmatchStmContext unmatchStm() throws RecognitionException {
		UnmatchStmContext _localctx = new UnmatchStmContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_unmatchStm);
		try {
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				match(IF);
				setState(125);
				match(LP);
				setState(126);
				expr();
				setState(127);
				match(RP);
				setState(128);
				stm();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				match(IF);
				setState(131);
				match(LP);
				setState(132);
				expr();
				setState(133);
				match(RP);
				setState(134);
				matchStm();
				setState(135);
				match(ELSE);
				setState(136);
				unmatchStm();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OtherStmContext extends ParserRuleContext {
		public Block_stmContext block_stm() {
			return getRuleContext(Block_stmContext.class,0);
		}
		public Call_stmContext call_stm() {
			return getRuleContext(Call_stmContext.class,0);
		}
		public Return_stmContext return_stm() {
			return getRuleContext(Return_stmContext.class,0);
		}
		public Continue_stmContext continue_stm() {
			return getRuleContext(Continue_stmContext.class,0);
		}
		public Break_stmContext break_stm() {
			return getRuleContext(Break_stmContext.class,0);
		}
		public Do_while_stmContext do_while_stm() {
			return getRuleContext(Do_while_stmContext.class,0);
		}
		public While_stmContext while_stm() {
			return getRuleContext(While_stmContext.class,0);
		}
		public For_stmContext for_stm() {
			return getRuleContext(For_stmContext.class,0);
		}
		public Assign_stmContext assign_stm() {
			return getRuleContext(Assign_stmContext.class,0);
		}
		public OtherStmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_otherStm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MT22Listener ) ((MT22Listener)listener).enterOtherStm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MT22Listener ) ((MT22Listener)listener).exitOtherStm(this);
		}
	}

	public final OtherStmContext otherStm() throws RecognitionException {
		OtherStmContext _localctx = new OtherStmContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_otherStm);
		try {
			setState(149);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(140);
				block_stm();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				call_stm();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(142);
				return_stm();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(143);
				continue_stm();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(144);
				break_stm();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(145);
				do_while_stm();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(146);
				while_stm();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(147);
				for_stm();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(148);
				assign_stm();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Block_stmContext extends ParserRuleContext {
		public TerminalNode LCURB() { return getToken(MT22Parser.LCURB, 0); }
		public List_vardecl_stmContext list_vardecl_stm() {
			return getRuleContext(List_vardecl_stmContext.class,0);
		}
		public TerminalNode RCURB() { return getToken(MT22Parser.RCURB, 0); }
		public Block_stmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block_stm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MT22Listener ) ((MT22Listener)listener).enterBlock_stm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MT22Listener ) ((MT22Listener)listener).exitBlock_stm(this);
		}
	}

	public final Block_stmContext block_stm() throws RecognitionException {
		Block_stmContext _localctx = new Block_stmContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_block_stm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(LCURB);
			setState(152);
			list_vardecl_stm();
			setState(153);
			match(RCURB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_vardecl_stmContext extends ParserRuleContext {
		public List_vardecl_stmprimeContext list_vardecl_stmprime() {
			return getRuleContext(List_vardecl_stmprimeContext.class,0);
		}
		public List_vardecl_stmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_vardecl_stm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MT22Listener ) ((MT22Listener)listener).enterList_vardecl_stm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MT22Listener ) ((MT22Listener)listener).exitList_vardecl_stm(this);
		}
	}

	public final List_vardecl_stmContext list_vardecl_stm() throws RecognitionException {
		List_vardecl_stmContext _localctx = new List_vardecl_stmContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_list_vardecl_stm);
		try {
			setState(157);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LCURB:
			case BREAK:
			case DO:
			case FOR:
			case IF:
			case RETURN:
			case WHILE:
			case CONTINUE:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(155);
				list_vardecl_stmprime();
				}
				break;
			case RCURB:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_vardecl_stmprimeContext extends ParserRuleContext {
		public Vardecl_stmprimeContext vardecl_stmprime() {
			return getRuleContext(Vardecl_stmprimeContext.class,0);
		}
		public List_vardecl_stmprimeContext list_vardecl_stmprime() {
			return getRuleContext(List_vardecl_stmprimeContext.class,0);
		}
		public List_vardecl_stmprimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_vardecl_stmprime; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MT22Listener ) ((MT22Listener)listener).enterList_vardecl_stmprime(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MT22Listener ) ((MT22Listener)listener).exitList_vardecl_stmprime(this);
		}
	}

	public final List_vardecl_stmprimeContext list_vardecl_stmprime() throws RecognitionException {
		List_vardecl_stmprimeContext _localctx = new List_vardecl_stmprimeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_list_vardecl_stmprime);
		try {
			setState(163);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(159);
				vardecl_stmprime();
				setState(160);
				list_vardecl_stmprime();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(162);
				vardecl_stmprime();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Vardecl_stmprimeContext extends ParserRuleContext {
		public VariablesdeclContext variablesdecl() {
			return getRuleContext(VariablesdeclContext.class,0);
		}
		public StmContext stm() {
			return getRuleContext(StmContext.class,0);
		}
		public Vardecl_stmprimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardecl_stmprime; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MT22Listener ) ((MT22Listener)listener).enterVardecl_stmprime(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MT22Listener ) ((MT22Listener)listener).exitVardecl_stmprime(this);
		}
	}
